--- a/ReviewsFindMore01/Src/Screen1.fx.yaml
+++ b/ReviewsFindMore01/Src/Screen1.fx.yaml
@@ -42,20 +42,6 @@ Screen1 As screen:
         Y: =11
         ZIndex: =4
 
-    Label5 As label:
-        Align: =Align.Center
-        BorderColor: =RGBA(69, 186, 184, 1)
-        Color: =RGBA(205, 228, 231, 1)
-        DisabledColor: =RGBA(166, 166, 166, 1)
-        Font: =Font.Verdana
-        Height: =73
-        Size: =50
-        Text: ="Feedback"
-        Width: =327
-        X: =155
-        Y: =276
-        ZIndex: =5
-
     Button5 As button:
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
@@ -137,9 +123,9 @@ Screen1 As screen:
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
         DisabledFill: =RGBA(244, 244, 244, 1)
         Height: =92
-        Image: ='FindmoreConsutling_white-01-1536x261'
+        Image: =imageedit_2_3718430920
         Width: =526
         X: =52
-        Y: =201
+        Y: =191
         ZIndex: =9
 
