--- a/ReviewsFindMore01/Src/Scren 1_1.fx.yaml
+++ b/ReviewsFindMore01/Src/Scren 1_1.fx.yaml
@@ -1,8 +1,8 @@
-"'Scren 1' As screen":
+"'Scren 1_1' As screen":
     Fill: =RGBA(29, 29, 29, 1)
     LoadingSpinnerColor: =RGBA(3, 121, 137, 1)
 
-    Image2_1 As image:
+    Image2_2 As image:
         BorderColor: =RGBA(69, 186, 184, 1)
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
         DisabledFill: =RGBA(244, 244, 244, 1)
@@ -13,14 +13,14 @@
         Y: =86
         ZIndex: =1
 
-    NavBar_1 As rectangle:
+    NavBar_2 As rectangle:
         BorderColor: =RGBA(218, 241, 241, 1)
         Fill: =RGBA(3, 109, 123, 1)
         Height: =86
         Width: =640
         ZIndex: =2
 
-    Logout_1 As icon.Leave:
+    Logout_2 As icon.Leave:
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(241, 244, 249, 1)
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
@@ -32,7 +32,7 @@
         Y: =15
         ZIndex: =3
 
-    Menu_1 As icon.Hamburger:
+    Menu_2 As icon.Hamburger:
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(241, 244, 249, 1)
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
@@ -42,7 +42,7 @@
         Y: =11
         ZIndex: =4
 
-    Label5_1 As label:
+    Label5_3 As label:
         Align: =Align.Center
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(29, 29, 29, 1)
@@ -57,7 +57,7 @@
         Y: =110
         ZIndex: =5
 
-    Button4_1 As button:
+    Button4_2 As button:
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
         DisabledColor: =RGBA(255, 255, 255, 1)
         DisabledFill: =RGBA(3, 121, 137, 1)
@@ -73,7 +73,7 @@
         Y: =1024
         ZIndex: =8
 
-    Voltar As button:
+    Voltar_1 As button:
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
         DisabledFill: =RGBA(244, 244, 244, 1)
@@ -89,7 +89,7 @@
         Y: =1024
         ZIndex: =9
 
-    Label1 As label:
+    Label1_3 As label:
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(29, 29, 29, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
@@ -101,7 +101,7 @@
         Y: =300
         ZIndex: =10
 
-    TextInput1 As text:
+    TextInput1_2 As text:
         BorderColor: =RGBA(69, 186, 184, 1)
         BorderThickness: =2
         Color: =RGBA(255, 255, 255, 1)
@@ -123,7 +123,7 @@
         Y: =370
         ZIndex: =11
 
-    Label1_1 As label:
+    Label1_4 As label:
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(29, 29, 29, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
@@ -135,7 +135,7 @@
         Y: =464
         ZIndex: =13
 
-    Label5_2 As label:
+    Label5_4 As label:
         Align: =Align.Center
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(29, 29, 29, 1)
@@ -149,7 +149,7 @@
         Y: =203
         ZIndex: =14
 
-    TextInput1_1 As text:
+    TextInput1_3 As text:
         BorderColor: =RGBA(69, 186, 184, 1)
         BorderThickness: =2
         Color: =RGBA(255, 255, 255, 1)
@@ -172,7 +172,7 @@
         Y: =534
         ZIndex: =15
 
-    Dropdown1_1 As dropdown:
+    Dropdown1_2 As dropdown:
         BorderColor: =RGBA(69, 186, 184, 1)
         BorderThickness: =0
         ChevronBackground: =RGBA(3, 121, 137, 1)
@@ -224,7 +224,7 @@
         Y: =865
         ZIndex: =16
 
-    Label1_2 As label:
+    Label1_5 As label:
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(29, 29, 29, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
