--- a/ReviewsFindMore01/Src/Base.fx.yaml
+++ b/ReviewsFindMore01/Src/Base.fx.yaml
@@ -1,4 +1,4 @@
-"'Scren 1' As screen":
+Base As screen:
     Fill: =RGBA(29, 29, 29, 1)
     LoadingSpinnerColor: =RGBA(3, 121, 137, 1)
 
@@ -81,6 +81,7 @@
         Height: =70
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(3, 121, 137, 1), -20%)
+        OnSelect: =Navigate(Screen1,ScreenTransition.Fade)
         Size: =24
         Text: ="Voltar"
         Width: =280
