--- a/ReviewsFindMore01/CanvasManifest.json
+++ b/ReviewsFindMore01/CanvasManifest.json
@@ -113,7 +113,6 @@
     "FileID": "8675abbf-3a53-453e-9cc5-1b31ab1f1db4",
     "Id": "afcfc828-9a5f-4529-bb52-707522d30f83",
     "InstrumentationKey": "",
-    "LocalDatabaseReferences": "{}",
     "ManualOfflineProfileId": "",
     "Name": "ReviewsFindMore.msapp",
     "OriginatingVersion": "1.332",
@@ -132,7 +131,6 @@
   },
   "ScreenOrder": [
     "Screen1",
-    "Base",
-    "Scren 1_1"
+    "Base"
   ]
 }
