--- a/ReviewsFindMore01/Src/Screen1.fx.yaml
+++ b/ReviewsFindMore01/Src/Screen1.fx.yaml
@@ -113,7 +113,7 @@ Screen1 As screen:
         Height: =70
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(3, 121, 137, 1), -20%)
-        OnSelect: =Navigate(Base,ScreenTransition.Fade)
+        OnSelect: =
         Size: =24
         Text: ="Confirmar"
         Width: =280
