--- a/ReviewsFindMore01/Src/Screen1.fx.yaml
+++ b/ReviewsFindMore01/Src/Screen1.fx.yaml
@@ -32,16 +32,6 @@ Screen1 As screen:
         Y: =15
         ZIndex: =3
 
-    Menu As icon.Hamburger:
-        BorderColor: =RGBA(69, 186, 184, 1)
-        Color: =RGBA(241, 244, 249, 1)
-        DisabledBorderColor: =RGBA(166, 166, 166, 1)
-        DisabledColor: =RGBA(244, 244, 244, 1)
-        Icon: =Icon.Hamburger
-        X: =16
-        Y: =11
-        ZIndex: =4
-
     Button5 As button:
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
@@ -116,8 +106,8 @@ Screen1 As screen:
         Size: =24
         Text: ="Confirmar"
         Width: =280
-        X: =175
-        Y: =500
+        X: =159
+        Y: =501
         ZIndex: =8
 
     Image1 As image:
@@ -130,4 +120,14 @@ Screen1 As screen:
         X: =52
         Y: =191
         ZIndex: =9
+
+    MenuLeftNav_1 As MenuLeftNav:
+        HamburgerMenuColor: =RGBA(255, 255, 255, 1)
+        Height: =1120
+        MenuColor: =RGBA(3, 121, 137, 1)
+        MenuWidth: =If(showMenu, MenuLeftNav_1.SetMenuWidth,icoHamburger_1.Width)
+        OnReset: =Set(showMenu, MenuLeftNav_1.ExpandMenu)
+        Width: =373
+        Y: =15
+        ZIndex: =10
 
