--- a/ReviewsFindMore01/Src/Components/MenuLeftNav.fx.yaml
+++ b/ReviewsFindMore01/Src/Components/MenuLeftNav.fx.yaml
@@ -49,7 +49,7 @@ MenuLeftNav As CanvasComponent:
                 )
             }
         )
-    MenuWidth: =If(showMenu, MenuLeftNav.SetMenuWidth,icoHamburger_1.Width)
+    MenuWidth: =250
     OnReset: =Set(showMenu, MenuLeftNav.ExpandMenu)
     SetMenuWidth: =300
     Width: =MenuLeftNav.MenuWidth
@@ -57,29 +57,13 @@ MenuLeftNav As CanvasComponent:
     Y: =0
     ZIndex: =1
 
-    icoHamburger_1 As icon.Hamburger:
-        BorderColor: =RGBA(0, 18, 107, 1)
-        Color: =MenuLeftNav.HamburgerMenuColor
-        DisabledBorderColor: =RGBA(166, 166, 166, 1)
-        DisabledColor: =RGBA(244, 244, 244, 1)
-        Height: =49
-        Icon: =Icon.Hamburger
-        OnSelect: =Set(showMenu,!showMenu)
-        PaddingBottom: =5
-        PaddingLeft: =5
-        PaddingRight: =5
-        PaddingTop: =5
-        Width: =59
-        ZIndex: =1
-
     galMenu_1 As gallery.variableTemplateHeightGallery:
         BorderColor: =RGBA(0, 18, 107, 1)
         Fill: =MenuLeftNav.MenuBkgColor
-        Height: =Parent.Height-icoHamburger_1.Height
+        Height: =Parent.Height
         Items: =Sort(MenuLeftNav.MenuItems,MenuID,SortOrder.Ascending)
         Layout: =Layout.Vertical
         TemplateSize: =280
-        Visible: =showMenu
         Width: =Parent.Width
         Y: =icoHamburger_1.Height
         ZIndex: =2
