--- a/ReviewsFindMore01/Src/Scren 1_1.fx.yaml
+++ b/ReviewsFindMore01/Src/Scren 1_1.fx.yaml
@@ -1,5 +1,6 @@
 "'Scren 1_1' As screen":
-    Fill: =RGBA(29, 29, 29, 1)
+    BackgroundImage: =
+    Fill: =RGBA(0, 0, 0, 1)
     LoadingSpinnerColor: =RGBA(3, 121, 137, 1)
 
     Image2_2 As image:
