--- a/ReviewsFindMore01/Src/Screen3.fx.yaml
+++ b/ReviewsFindMore01/Src/Screen3.fx.yaml
@@ -1,17 +1,16 @@
-"'Scren 1_1' As screen":
-    BackgroundImage: =
-    Fill: =RGBA(0, 0, 0, 1)
+Screen3 As screen:
+    Fill: =RGBA(29, 29, 29, 1)
     LoadingSpinnerColor: =RGBA(3, 121, 137, 1)
 
     Image2_2 As image:
         BorderColor: =RGBA(69, 186, 184, 1)
         DisabledBorderColor: =RGBA(166, 166, 166, 1)
         DisabledFill: =RGBA(244, 244, 244, 1)
-        Height: =1050
+        Height: =1095
         Image: ='rm222-mind-14'
         ImagePosition: =ImagePosition.Fill
         Width: =640
-        Y: =86
+        Y: =41
         ZIndex: =1
 
     NavBar_2 As rectangle:
@@ -94,24 +93,48 @@
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(29, 29, 29, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
+        FontWeight: =FontWeight.Semibold
         Height: =70
         Size: =21
-        Text: ="Assunto"
+        Text: ="Avaliação"
         Width: =560
         X: =41
         Y: =300
         ZIndex: =10
 
+    TextInput1_2 As text:
+        BorderColor: =RGBA(69, 186, 184, 1)
+        BorderThickness: =2
+        Color: =RGBA(255, 255, 255, 1)
+        Default: =""
+        DisabledBorderColor: =RGBA(69, 186, 184, 1)
+        DisabledColor: =RGBA(255, 255, 255, 1)
+        DisabledFill: =RGBA(3, 121, 137, 1)
+        Fill: =RGBA(3, 121, 137, 1)
+        FocusedBorderThickness: =4
+        Height: =70
+        HintText: ="..."
+        HoverBorderColor: =RGBA(69, 186, 184, 1)
+        HoverColor: =RGBA(255, 255, 255, 1)
+        HoverFill: =RGBA(3, 121, 137, 1)
+        Italic: =true
+        Size: =21
+        Width: =560
+        X: =41
+        Y: =522
+        ZIndex: =11
+
     Label1_4 As label:
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(29, 29, 29, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
+        FontWeight: =FontWeight.Semibold
         Height: =70
         Size: =21
-        Text: ="Mensagem"
+        Text: ="Outros"
         Width: =560
-        X: =41
-        Y: =464
+        X: =42
+        Y: =765
         ZIndex: =13
 
     Label5_4 As label:
@@ -138,7 +161,7 @@
         DisabledFill: =RGBA(3, 121, 137, 1)
         Fill: =RGBA(3, 121, 137, 1)
         FocusedBorderThickness: =4
-        Height: =238
+        Height: =143
         HintText: ="..."
         HoverBorderColor: =RGBA(69, 186, 184, 1)
         HoverColor: =RGBA(255, 255, 255, 1)
@@ -147,72 +170,21 @@
         Mode: =TextMode.MultiLine
         Size: =21
         Width: =560
-        X: =39
-        Y: =534
+        X: =44
+        Y: =835
         ZIndex: =15
-
-    Dropdown1_2 As dropdown:
-        BorderColor: =RGBA(69, 186, 184, 1)
-        BorderThickness: =0
-        ChevronBackground: =RGBA(3, 121, 137, 1)
-        ChevronDisabledBackground: =RGBA(166, 166, 166, 1)
-        ChevronDisabledFill: =RGBA(244, 244, 244, 1)
-        ChevronHoverBackground: =ColorFade(RGBA(3, 121, 137, 1), -20%)
-        ChevronHoverFill: =RGBA(255, 255, 255, 1)
-        Color: =RGBA(255, 255, 255, 1)
-        DisabledBorderColor: =RGBA(166, 166, 166, 1)
-        DisabledColor: =RGBA(166, 166, 166, 1)
-        DisabledFill: =RGBA(3, 121, 137, 1)
-        Fill: =RGBA(3, 121, 137, 1)
-        Font: =Font.'Segoe UI'
-        FontWeight: =FontWeight.Lighter
-        Height: =70
-        HoverColor: =RGBA(237, 237, 237, 1)
-        HoverFill: =RGBA(3, 121, 137, 1)
-        Items: |-
-            =Table(
-                {
-                    SampleStringField: "Eventos"
-                },
-                {
-                    SampleStringField: "Escritório"
-                },
-                {
-                    SampleStringField: "Cliente"
-                },
-                {
-                    SampleStringField: "Trabalho diário"
-                },
-                {
-                    SampleStringField: "Viagens"
-                },
-                    {
-                    SampleStringField: "Gestão"
-                },
-                    {
-                    SampleStringField: "Outros"
-                }
-            )
-        PressedBorderColor: =ColorFade(RGBA(3, 121, 137, 1), -20%)
-        PressedColor: =RGBA(255, 255, 255, 1)
-        PressedFill: =RGBA(3, 121, 137, 1)
-        SelectionFill: =RGBA(3, 121, 137, 1)
-        Size: =21
-        Width: =558
-        X: =41
-        Y: =865
-        ZIndex: =16
 
     Label1_5 As label:
         BorderColor: =RGBA(69, 186, 184, 1)
         Color: =RGBA(29, 29, 29, 1)
         DisabledColor: =RGBA(166, 166, 166, 1)
+        FontWeight: =FontWeight.Semibold
         Height: =70
         Size: =21
-        Text: ="Tópico"
+        Text: ="Pontos Positivos"
         Width: =560
-        X: =39
-        Y: =795
+        X: =40
+        Y: =452
         ZIndex: =17
 
     Rating1 As rating:
@@ -232,6 +204,41 @@
         RatingFill: =RGBA(69, 186, 184, 1)
         Width: =350
         X: =41
-        Y: =370
+        Y: =373
         ZIndex: =18
+
+    TextInput1_4 As text:
+        BorderColor: =RGBA(69, 186, 184, 1)
+        BorderThickness: =2
+        Color: =RGBA(255, 255, 255, 1)
+        Default: =""
+        DisabledBorderColor: =RGBA(69, 186, 184, 1)
+        DisabledColor: =RGBA(255, 255, 255, 1)
+        DisabledFill: =RGBA(3, 121, 137, 1)
+        Fill: =RGBA(3, 121, 137, 1)
+        FocusedBorderThickness: =4
+        Height: =70
+        HintText: ="..."
+        HoverBorderColor: =RGBA(69, 186, 184, 1)
+        HoverColor: =RGBA(255, 255, 255, 1)
+        HoverFill: =RGBA(3, 121, 137, 1)
+        Italic: =true
+        Size: =21
+        Width: =560
+        X: =42
+        Y: =676
+        ZIndex: =19
+
+    Label1_6 As label:
+        BorderColor: =RGBA(69, 186, 184, 1)
+        Color: =RGBA(29, 29, 29, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        FontWeight: =FontWeight.Semibold
+        Height: =70
+        Size: =21
+        Text: ="Pontos Negativos"
+        Width: =560
+        X: =41
+        Y: =606
+        ZIndex: =20
 
