--- a/ReviewsFindMore01/Src/Screen2.fx.yaml
+++ b/ReviewsFindMore01/Src/Screen2.fx.yaml
@@ -138,8 +138,7 @@ Screen2 As screen:
         FontWeight: =FontWeight.Semibold
         Height: =97
         Size: =36
-        Text: |
-            =
+        Text: =First(Filter(Feedbacks, Text(Id) = Text(Max(Feedbacks, Id)))).Tipo
         Width: =537
         X: =52
         Y: =203
